--- a/plharvey_17/lattice.ipynb
+++ b/plharvey_17/lattice.ipynb
@@ -4,47 +4,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mKernel Python 3.10.6 is not usable. Check the Jupyter output tab for more information. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import itertools\n",
     "import numpy as np\n",
-    "from scipy.stats import norm\n",
     "\n",
-    "a = np.zeros((8,8))\n",
-    "for i, j in itertools.product(range(8), range(8)):\n",
-    "    uvw = norm.rvs(size = 3)\n",
-    "    for k in uvw:\n",
-    "        uvw[k] = 0 if k < 0.5 else 1\n",
-    "    r = [uvw[0]*a[i,j],  uvw[1]*a[i,j], uvw[2]*a[i,j]]\n",
+    "def build_lattice(n: int = None, p: float = None):\n",
+    "    if n == None or p == None:\n",
+    "        rng: Generator = np.random.default_rng()  \n",
+    "        n: Literal[1] = 1 #@param {type:slider, min:1, max:100, step:1}\n",
+    "        p: Literal[1] = 0.5 #@param {type:slider, min:0, max:1, step:0.0001}\n",
+    "    from numpy import random.Generator.binomial() as gen_fun()\n",
+    "    x_0 = [0]\n",
+    "    x_1 = [0]\n",
+    "    left = [x_0.append(i) for i in range(n)] \n",
+    "    down = [x_1.append(i) for i in range(n)]\n",
+    "    M = np.zeros_like((left,down))\n",
+    "    for i in range(n):\n",
+    "        col = left[i+1] \n",
+    "            # % 2 == 0:\n",
+    "            # good = 1\n",
+    "        row = down[i]\n",
+    "        M[]\n",
+    "    y_0 = (2 * n + (n + 1))\n",
+    "    row = np.array([x_0, x_1])\n",
     "\n"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "import plotly\n",
-    "from pyxtal.lattice import Lattice\n",
-    "\n",
-    "Lattice(type = 'hexagonal',\n",
-    "        volume = 8,\n",
-    "        matrix = np.full(shape = (8,8),\n",
-    "                         fill_value = ),\n",
-    "        PBC = [1,1,1],\n",
-    "        **kwargs)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
