--- a/plharvey_20/Word_Shift.ipynb
+++ b/plharvey_20/Word_Shift.ipynb
@@ -83,9 +83,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 1,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: matplotlib in /home/codespace/.local/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (3.7.0)\n",
+            "Requirement already satisfied: networkx in /usr/local/python/3.10.4/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (3.0)\n",
+            "Requirement already satisfied: nltk in /usr/local/python/3.10.4/lib/python3.10/site-packages (from -r requirements.txt (line 3)) (3.8.1)\n",
+            "Requirement already satisfied: numpy in /home/codespace/.local/lib/python3.10/site-packages (from -r requirements.txt (line 4)) (1.24.2)\n",
+            "Requirement already satisfied: pandas in /home/codespace/.local/lib/python3.10/site-packages (from -r requirements.txt (line 5)) (1.5.3)\n",
+            "Requirement already satisfied: plotly in /usr/local/python/3.10.4/lib/python3.10/site-packages (from -r requirements.txt (line 6)) (5.13.1)\n",
+            "Requirement already satisfied: seaborn in /home/codespace/.local/lib/python3.10/site-packages (from -r requirements.txt (line 7)) (0.12.2)\n",
+            "Requirement already satisfied: tornado in /home/codespace/.local/lib/python3.10/site-packages (from -r requirements.txt (line 8)) (6.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (2.8.2)\n",
+            "Requirement already satisfied: packaging>=20.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (23.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (1.0.7)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (3.0.9)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (1.4.4)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (0.11.0)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (4.38.0)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 1)) (9.4.0)\n",
+            "Requirement already satisfied: click in /usr/local/python/3.10.4/lib/python3.10/site-packages (from nltk->-r requirements.txt (line 3)) (8.1.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/python/3.10.4/lib/python3.10/site-packages (from nltk->-r requirements.txt (line 3)) (4.64.1)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/python/3.10.4/lib/python3.10/site-packages (from nltk->-r requirements.txt (line 3)) (2022.10.31)\n",
+            "Requirement already satisfied: joblib in /home/codespace/.local/lib/python3.10/site-packages (from nltk->-r requirements.txt (line 3)) (1.2.0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /home/codespace/.local/lib/python3.10/site-packages (from pandas->-r requirements.txt (line 5)) (2022.7.1)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /home/codespace/.local/lib/python3.10/site-packages (from plotly->-r requirements.txt (line 6)) (8.2.1)\n",
+            "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->-r requirements.txt (line 1)) (1.16.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\" Run the latest and greatest. \"\"\"\n",
         "%pip install -r requirements.txt --upgrade\n",
@@ -136,8 +171,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 2,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "def load_text(f: str = '/content/text.txt',\n",
@@ -260,13 +299,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cM3epaQViD6S",
-        "outputId": "e5ed40a1-bf33-4fea-b6fa-3c8186e2888e"
+        "outputId": "e5ed40a1-bf33-4fea-b6fa-3c8186e2888e",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [
         {
@@ -279,7 +321,8 @@
         }
       ],
       "source": [
-        "wf, ng = get_word_freq(source)"
+        "wf, ng = get_word_freq(source)\n",
+        "\n"
       ]
     },
     {
@@ -320,7 +363,10 @@
       "cell_type": "code",
       "execution_count": 72,
       "metadata": {
-        "id": "2K4jn_gw7xXc"
+        "id": "2K4jn_gw7xXc",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -352,7 +398,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -416,7 +466,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -442,7 +496,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -477,7 +535,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -502,7 +564,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -517,7 +583,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -534,7 +604,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -559,7 +633,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": []
     },
@@ -581,7 +659,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "\"\"\"\n",
@@ -625,6 +707,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -705,6 +788,39 @@
         "  },\n",
         "  OPTannote = \t {}\n",
         "}\n",
+        "\n",
+        "@Article{gallagher2021a,\n",
+        "  author =\t {\n",
+        "    Gallagher, Ryan J. \n",
+        "    and Frank, Morgan R. \n",
+        "    and Mitchell, Lewis \n",
+        "    and Schwartz, Aaron J. \n",
+        "    and Reagan, Andrew J. \n",
+        "    and Danforth, Christopher M. \n",
+        "    and Dodds, Peter Sheridan\n",
+        "  },\n",
+        "  title =\t {\n",
+        "    Generalized word shift graphs: \n",
+        "    A method for visualizing and \n",
+        "    explaining pairwise comparisons between texts\n",
+        "  },\n",
+        "  journal =\t {EPJ Data Science},\n",
+        "  year =\t {2021},\n",
+        "  key =\t {\n",
+        "    systems,\n",
+        "    text,\n",
+        "    words,\n",
+        "    divergences,\n",
+        "    entropy,\n",
+        "    language\n",
+        "  },\n",
+        "  volume =\t {10},\n",
+        "  pages =\t {4},\n",
+        "  note =\t {\n",
+        "    Available online at \n",
+        "    \\href{https://arxiv.org/abs/2008.02250}{https://arxiv.org/abs/2008.02250}\n",
+        "  },\n",
+        "}\n",
         "```\n",
         "\n",
         "\n",
@@ -727,18 +843,6 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.10.4"
     },
     "vscode": {
       "interpreter": {
